--- a/web/static/global.css
+++ b/web/static/global.css
@@ -1,9 +1,10 @@
 body {
 	margin: 0;
-	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: Helvetica, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
-	color: #333;
+	color: #2B2B2B;
+	background: #f2f2f2;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -20,13 +21,11 @@ a {
 	color: inherit;
 }
 
-code {
-	font-family: menlo, inconsolata, monospace;
-	font-size: calc(1em - 2px);
-	color: #555;
-	background-color: #f0f0f0;
-	padding: 0.2em 0.4em;
-	border-radius: 2px;
+.container {
+	max-width: 1200px;
+	padding: 0 20px;
+	box-sizing: border-box;
+	margin: 0 auto;
 }
 
 @media (min-width: 400px) {
